--- a/index.html
+++ b/index.html
@@ -3,9 +3,202 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <title>Bootstrap Dashboard</title>
 </head>
 <body>
+
+  <!-- Menu di navigazione -->
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+    <div class="container-fluid">
+      <a class="navbar-brand d-flex align-items-center" href="#">
+        <img src="img/duck.png" alt="Logo" width="70" height="70" class="me-1">
+      </a>
+      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav d-flex flex-row align-items-center">
+          <li class="nav-item me-3">
+            <a class="nav-link text-white" href="#">Catalogo Libri</a>
+          </li>
+          <li class="nav-item me-3">
+            <a class="nav-link" href="#">Anagrafica Utenti</a>
+          </li>
+          <li class="nav-item me-3">
+            <a class="nav-link" href="#">Storico Prestiti</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Help</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   
+  <!-- header della tabella -->
+  <div class="container d-flex justify-content-between px-3">
+    <div>
+      <h3>Catologo Libri</h3>
+    </div>
+    <div>
+      <button class="btn bg-primary text-white">Aggiungi Libri</button>
+    </div>
+  </div>
+  
+  <div class="container">
+    <div class="table-responsive">
+      <table class="table table-striped table-hover mb-0">
+        <!-- Titoli dei contenuti nella tabella -->
+        <thead>
+          <tr class="border-bottom">
+            <th scope="col" class="fw-semibold py-3 ps-3">Titolo</th>
+            <th scope="col" class="fw-semibold py-3 d-none d-md-table-cell">Data prestito</th>
+            <th scope="col" class="fw-semibold py-3">Stato</th>
+            <th scope="col" class="fw-semibold py-3">Azioni</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="align-middle py-3 ps-3">I pilastri della terra</td>
+            <td class="align-middle py-3 d-none d-md-table-cell">-</td>
+            <td class="align-middle py-3"><span class="badge bg-success px-1 py-2">Disponibile</span></td>
+            <td class="align-middle py-3">
+              <div class="d-md-flex d-sm-flex">
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-pen"></i></button>
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-trash"></i></button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="align-middle py-3 ps-3">I promessi sposi</td>
+            <td class="align-middle py-3 d-none d-md-table-cell">-</td>
+            <td class="align-middle py-3"><span class="badge bg-success px-1 py-2">Disponibile</span></td>
+            <td class="align-middle py-3">
+              <div class="d-md-flex d-sm-flex">
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-pen"></i></button>
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-trash"></i></button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="align-middle py-3 ps-3">Il signore degli anelli</td>
+            <td class="align-middle py-3 d-none d-md-table-cell">18/10/2023</td>
+            <td class="align-middle py-3"><span class="badge bg-warning text-dark px-1 py-2">In prestito</span></td>
+            <td class="align-middle py-3">
+              <div class="d-md-flex d-sm-flex">
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-pen"></i></button>
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-trash"></i></button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="align-middle py-3 ps-3">Harry Potter e la pietra filosofale</td>
+            <td class="align-middle py-3 d-none d-md-table-cell">-</td>
+            <td class="align-middle py-3"><span class="badge bg-success px-1 py-2">Disponibile</span></td>
+            <td class="align-middle py-3">
+              <div class="d-md-flex d-sm-flex">
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-pen"></i></button>
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-trash"></i></button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="align-middle py-3 ps-3">Il codice Da Vinci</td>
+            <td class="align-middle py-3 d-none d-md-table-cell">-</td>
+            <td class="align-middle py-3"><span class="badge bg-danger px-1 py-2">Non disponibile</span></td>
+            <td class="align-middle py-3">
+              <div class="d-md-flex d-sm-flex">
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-pen"></i></button>
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-trash"></i></button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="align-middle py-3 ps-3">Shining</td>
+            <td class="align-middle py-3 d-none d-md-table-cell">-</td>
+            <td class="align-middle py-3"><span class="badge bg-success px-1 py-2">Disponibile</span></td>
+            <td class="align-middle py-3">
+              <div class="d-md-flex d-sm-flex">
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-pen"></i></button>
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-trash"></i></button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="align-middle py-3 ps-3">La divina commedia</td>
+            <td class="align-middle py-3 d-none d-md-table-cell">21/09/2023</td>
+            <td class="align-middle py-3"><span class="badge bg-warning text-dark px-1 py-2">In prestito</span></td>
+            <td class="align-middle py-3">
+              <div class="d-md-flex d-sm-flex">
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-pen"></i></button>
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-trash"></i></button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="align-middle py-3 ps-3">Il trono di spade</td>
+            <td class="align-middle py-3 d-none d-md-table-cell">-</td>
+            <td class="align-middle py-3"><span class="badge bg-success px-1 py-2">Disponibile</span></td>
+            <td class="align-middle py-3">
+              <div class="d-md-flex d-sm-flex">
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-pen"></i></button>
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-trash"></i></button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="align-middle py-3 ps-3">Il mondo di Sofia</td>
+            <td class="align-middle py-3 d-none d-md-table-cell">-</td>
+            <td class="align-middle py-3"><span class="badge bg-danger px-1 py-2">Non disponibile</span></td>
+            <td class="align-middle py-3">
+              <div class="d-md-flex d-sm-flex">
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-pen"></i></button>
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-trash"></i></button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="align-middle py-3 ps-3">Le cronache di Narnia: il leone, la strega e l'armadio</td>
+            <td class="align-middle py-3 d-none d-md-table-cell">25/07/2023</td>
+            <td class="align-middle py-3"><span class="badge bg-warning text-dark px-1 py-2">In prestito</span></td>
+            <td class="align-middle py-3">
+              <div class="d-md-flex d-sm-flex">
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-pen"></i></button>
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-trash"></i></button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="align-middle py-3 ps-3">Il piccolo principe</td>
+            <td class="align-middle py-3 d-none d-md-table-cell">-</td>
+            <td class="align-middle py-3"><span class="badge bg-success px-1 py-2">Disponibile</span></td>
+            <td class="align-middle py-3">
+              <div class="d-md-flex d-sm-flex">
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-pen"></i></button>
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-trash"></i></button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="align-middle py-3 ps-3">La storia infinita</td>
+            <td class="align-middle py-3 d-none d-md-table-cell">-</td>
+            <td class="align-middle py-3"><span class="badge bg-success px-1 py-2">Disponibile</span></td>
+            <td class="align-middle py-3">
+              <div class="d-md-flex d-sm-flex">
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-pen"></i></button>
+                <button class="btn btn-outline-secondary border-2 p-2"><i class="fa-solid fa-trash"></i></button>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+  
