Aggiunto link a button aggiungi libri

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
       <h3>Catologo Libri</h3>
     </div>
     <div>
-      <button class="btn bg-primary text-white">Aggiungi Libri</button>
+      <button class="btn bg-primary text-white">
+        <a href="otherpages/addbooks.html" class= "text-white text-decoration-none">Aggiungi Libri</a>
+      </button>
     </div>
   </div>
   
